welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:3: error: not found: value litmessage
while (fini != true) { litmessage()
                       ^BDR2:14: error: value avance is not a member of Unit
	 case "Z" => avance();avance();avance()avance();avance();avance()
                                               ^